syntax = "proto3";
package zetachain.zetacore.observer;

import "gogoproto/gogo.proto";
import "observer/crosschain_flags.proto";
import "observer/observer.proto";

option go_package = "github.com/zeta-chain/zetacore/x/observer/types";

message EventBallotCreated {
  string msg_type_url = 1;
  string ballot_identifier = 2;
  string observation_hash = 3;
  string observation_chain = 4;
  string ballot_type = 5;
}

message EventKeygenBlockUpdated {
  string msg_type_url = 1;
  string keygen_block = 2;
  string keygen_pubkeys = 3;
}

message EventNewObserverAdded {
  string msg_type_url = 1;
  string observer_address = 2;
  string zetaclient_grantee_address = 3;
  string zetaclient_grantee_pubkey = 4;
  uint64 observer_last_block_count = 5;
}

message EventCrosschainFlagsUpdated {
  string msg_type_url = 1;
  bool isInboundEnabled = 2;
  bool isOutboundEnabled = 3;
  GasPriceIncreaseFlags gasPriceIncreaseFlags = 4;
  string signer = 5;
}
